# confgate

./: .gitignore  FINDINGS.md  HYPOTHESES.md  Makefile  NEXT_EXPERIMENTS.md  PAPER_INDEX.md  README.md  SPEC_TRIAGE_PIPELINE_v1.1.md  SPEC_TRIAGE_PIPELINE_v1.2.md  SPEC_TRIAGE_PIPELINE_v1.md  pyproject.toml
.claude/: research-sweep.yaml
.claude/skills/confgate-triage/: SKILL.md
.github/workflows/: ci.yml
confgate/: __init__.py  certify.py  cli.py  gate.py  preflight.py  route.py
confgate/data/: pinned_gates.json  pinned_meta.json
research-graph/: .digest-watch.sh  .env.example  CLAUDE.md  HANDOFF_2026-06-16.md  README.md  STATE.md  _confgate_triage_prompt.template  admit.py  bridge.py  brief_parser.py  docker-compose.yml  generate_next_experiments.py  premises.py  promote_brief.py  pull_from_linkforge.py  query.py  requirements.txt  schema.cypher  seed_findings.py  triage_one.sh  triage_pending.sh  update_status.py  validate_claims.py
research-graph/scripts/: spin-test-graph.sh
scripts/: fit_pinned.py
tests/: test_confgate.py
tests/research_graph/: conftest.py  graphutil.py  test_packaging.py  test_phase0_graph.py  test_phase1_admit.py  test_phase2_brief.py  test_phase3_promote.py  test_phase4_e2e.py  test_phase4_seed.py
tests/research_graph/fixtures/: HYPOTHESES.bootstrap.md  PAPER_INDEX.bootstrap.md  triage-sample.md
